--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -449,6 +449,15 @@ a {
 /* =============
     Header
 ============= */
+header {
+  background-color: #F8E5D4;
+}
+header section {
+  display: grid;
+  padding: 10px;
+  grid-template-columns: 50px auto;
+}
+
 /* =============
     Footer
 ============= */
