--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -2,5 +2,10 @@
     Header
 ============= */
 header {
-	
+	background-color: #F8E5D4;
+    section {
+        display: grid;
+        padding: 10px;
+        grid-template-columns: 50px auto;
+    }
 }
