--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -6,6 +6,6 @@ header {
     section {
         display: grid;
         padding: 10px;
-        grid-template-columns: 50px auto;
+        grid-template-columns: auto;
     }
 }
