--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -19,7 +19,9 @@
 @import "layout/_footer";
 
 // Sections Styles
-@import "section/_events";
+@import "sections/_events";
+@import "sections/_donate";
+@import "sections/_shop";
 
 
 
