--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -1,3 +1,16 @@
-#events{
-    
+#events {
+    >div{
+        
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0px;
+        }
+        // @include md {
+        //     grid-template-columns: 50% auto;
+        //     grid-template-areas: 
+        //     "#beginner #locations"
+        //     ;
+        // }
 }
+} 
