--- a/dev/scss/base/_base.scss
+++ b/dev/scss/base/_base.scss
@@ -15,14 +15,5 @@ ul {
     }
 }
 
-.content {
-    margin-bottom: 24px;
+h1{font-family: 'Bebas Neue', cursive;}
 
-    @include md {
-        margin-bottom: 32px;
-    }
-
-    @include xl {
-        margin-bottom: 64px;
-    }
-}
