grids still arent workING
but i will continue forward

--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -1,5 +1,6 @@
 #events {
     background-color: #F8E5D4;
+    color: #F8E5D4;
     >div{
         
         ul {
@@ -19,12 +20,6 @@
             "#peace #letsget"
             "#herspaceBottom #herspaceBottom";
         }
-        // @include md {
-        //     grid-template-columns: 50% auto;
-        //     grid-template-areas: 
-        //     "#beginner #locations"
-        //     ;
-        // }
 }
 } 
 #herspaceTop{
