--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -606,6 +606,7 @@ footer > div #social ul li a:visited:active {
 
 #events {
   background-color: #F8E5D4;
+  color: #F8E5D4;
 }
 #events > div ul {
   list-style-type: none;
@@ -652,4 +653,34 @@ button {
   background-color: #F8E5D4;
   padding: 5px;
   margin: 10px;
+}
+
+#donate {
+  text-align: center;
+}
+#donate img {
+  max-width: 100%;
+}
+#donate p {
+  margin: 50px;
+}
+#donate button {
+  margin-bottom: 100px;
+}
+
+#tickets {
+  background-color: #F8E5D4;
+}
+#tickets ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0px;
+  grid-template-columns: 50px auto;
+  grid-template-areas: "#womens" "#artistsOfColor" "#peaceofme";
+}
+@media (min-width: 768px) {
+  #tickets {
+    grid-template-columns: 50px auto 50px;
+    grid-template-areas: "#womens #artistsOfColor #peaceofme";
+  }
 }
