--- a/dev/scss/sections/_shop.scss
+++ b/dev/scss/sections/_shop.scss
@@ -1,21 +1,26 @@
 #tickets{
-    background-color: #F8E5D4;
-    ul{
-            list-style-type: none;
-            margin: 0;
-            padding: 0px;
-            grid-template-columns: 50px auto;
-            grid-template-areas: 
-            "#womens"
-            "#artistsOfColor"
-            "#peaceofme"
-            ;
+    background-image: URL('img/ticketCovers/ticketsBack.png');
+    >div{
+            ul{
+                    list-style-type: none;
+                    margin: 0;
+                    padding: 0px;
+                    grid-template-columns: 50px auto;
+                    grid-template-areas: 
+                    "#womens"
+                    "#artistsOfColor"
+                    "#peaceofme"
+                    ;
+                }
+                @include md {
+                    grid-template-columns: 50px auto 50px ;
+                    grid-template-areas: 
+                    "#womens #artistsOfColor #peaceofme";
+
+
+            }
         }
-        @include md {
-            grid-template-columns: 50px auto 50px ;
-            grid-template-areas: 
-            "#womens #artistsOfColor #peaceofme";
+}
+#artwork{
 
-
-    }
 }
