--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -6,7 +6,8 @@ header {
     >div {
         display: grid;
         padding: 10px;
-        grid-template-columns: 50px 50px auto 50px 50px;
+        max-width: 100%;
+        grid-template-columns: (5, 1fr);
         grid-template-areas: 
         "#eventsLink #donateLink #imageLogo #storeLink #loginLink";
     }
