--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -21,6 +21,7 @@
 // Sections Styles
 @import "sections/_events";
 @import "sections/_donate";
+@import "sections/_tickets";
 @import "sections/_shop";
 
 
