--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -3,18 +3,19 @@
 ============= */
 button {
     cursor: pointer;
+    border-style: none;
 }
 
-.yellow-button {
-    background-color: $electricYellow;
-    border: none;
-    font-size: rem-calc(16);
-    font-weight: 600;
-    padding: 10px;
-    transition: 0.25s;
+// .yellow-button {
+//     background-color: $electricYellow;
+//     border: none;
+//     font-size: rem-calc(16);
+//     font-weight: 600;
+//     padding: 10px;
+//     transition: 0.25s;
 
-    &:hover {
-        background-color: $black;
-        color: $white;
-    }
-}
+//     &:hover {
+//         background-color: $black;
+//         color: $white;
+//     }
+// }
