--- a/dev/scss/sections/_donate.scss
+++ b/dev/scss/sections/_donate.scss
@@ -1,5 +1,7 @@
 #donate {
     text-align: center;
+    padding: 0%;
+    margin: 0%;
     img {
         max-width: 100%;
     }
@@ -7,7 +9,8 @@
         margin: 50px;
         
     }
-    button{
+#donbutt{
+    padding: 10px;
         margin-bottom: 100px;
     }
 }
