--- a/dev/scss/sections/_tickets.scss
+++ b/dev/scss/sections/_tickets.scss
@@ -1,5 +1,10 @@
 #tickets{
-    
+    background-color: #F8E5D4;
+    // background-image: url(../img/ticketCovers/ticketsBack.png);
+    // display: flex;
+    // justify-content: flex-start;
+    // width: 100%;
+    // background-position: center;
     >div{
         grid-area: tickets;
         align-items: center;
@@ -28,16 +33,19 @@
         }
         #purple{
             background-color: #A877D0;
+            color: #F8E5D4;
             padding: 5px;
             margin: 10px;
         }
         #yellow{
             background-color: #F1B458;
+            color: #F8E5D4;
             padding: 5px;
             margin: 10px;
         }
         #green{
             background-color: #398A5F;
+            color: #F8E5D4;
             padding: 5px;
             margin: 10px;
         }
