final class fixes
fixes

--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -662,6 +662,14 @@ button {
   margin-bottom: 100px;
 }
 
+h1 {
+  margin-bottom: 20px;
+}
+
+#logo {
+  margin: 40px;
+}
+
 #tickets {
   background-color: #F8E5D4;
 }
