--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -27,12 +27,15 @@
     
         }
 }
+display: flex;
+flex-direction: column;
 } 
 #herspaceTop{
     background-color: #A877D0;
     padding: 20px;
     text-align: center;
     box-shadow: #462D5A;
+
     
     
 }
