--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -7,7 +7,7 @@ header {
         display: grid;
         padding: 10px;
         max-width: 100%;
-        grid-template-columns: (5, 1fr);
+        grid-template-columns: 20% 20% 20% 20% 20%;
         grid-template-areas: 
         "#eventsLink #donateLink #imageLogo #storeLink #loginLink";
     }
