--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -35,8 +35,7 @@ flex-direction: column;
     padding: 20px;
     text-align: center;
     box-shadow: #462D5A;
-
-    
+    border-radius: 20px;
     
 }
 #letsget{
@@ -44,22 +43,29 @@ flex-direction: column;
     padding: 20px;
     text-align: center;
     box-shadow: #9D7336;
+    border-radius: 20px;
+
 }
 #peace{
     background-color: #398A5F;
     padding: 20px;
     text-align: center;
     box-shadow: #276143;
+    border-radius: 20px;
+
 }
 #herspaceBottom{
     background-color: #EBA5E8;
     padding: 20px;
     text-align: center;
     box-shadow: #7B4F79;
+    border-radius: 20px;
+
 }
 button{ 
     background-color: #F8E5D4;
-    padding: 5px;
-    margin: 10px;
+    padding: 15px;
+    margin: 20px;
+    border-radius: 20px;
 
 }
