--- a/dev/scss/sections/_shop.scss
+++ b/dev/scss/sections/_shop.scss
@@ -1,12 +1,14 @@
 #artwork{
     background-color: #F8E5D4;
+    padding: 20px;
+    text-align: center;
 
     >div{
         grid-area: artwork;
         ul{
                 display: grid;
                 list-style-type: none;
-                margin: 0;
+                margin: 10px;
                 padding: 0px;
                 grid-template-columns: 50% auto;
                 grid-template-areas: 
@@ -29,22 +31,37 @@
         
     }
 
+//-----Artwork-----//
+
+#fullback{
+    background-color: #A877D0;
+    border-radius: 20px;
+    padding: 40px;
+}
+#pieces{
+    background-color: #F8E5D4;
+    border-radius: 20px;
+    padding: 40px;
+}
+
+
+//-----buttons------//
     #purple{
         background-color: #A877D0;
         color: #F8E5D4;
-        padding: 5px;
+        padding: 15px;
         margin: 10px;
     }
     #yellow{
         background-color: #F1B458;
         color: #F8E5D4;
-        padding: 5px;
+        padding: 15px;
         margin: 10px;
     }
     #green{
         background-color: #398A5F;
         color: #F8E5D4;
-        padding: 5px;
+        padding: 15px;
         margin: 10px;
     }
 
