--- a/dev/scss/sections/_shop.scss
+++ b/dev/scss/sections/_shop.scss
@@ -2,14 +2,17 @@
     background-color: #F8E5D4;
     padding: 20px;
     text-align: center;
-
+    img{
+        max-width: 100%;
+        padding: 10px;
+    }
     >div{
         grid-area: artwork;
         ul{
                 display: grid;
                 list-style-type: none;
                 margin: 10px;
-                padding: 0px;
+                padding: 20px;
                 grid-template-columns: 50% auto;
                 grid-template-areas: 
                 "#piece1 #piece2"
@@ -19,6 +22,7 @@
 
                 @include md {
                     margin: 20px;
+                    padding: 20px;
                     grid-template-columns: repeat(3, 1fr) ;
                     grid-template-areas: 
                     "#piece1 #piece2 #piece3"
