--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -432,12 +432,12 @@ a {
 header {
   background-color: #F8E5D4;
 }
-header > div {
-  display: grid;
-  padding: 10px;
-  max-width: 100%;
-  grid-template-columns: 20% 20% 20% 20% 20%;
-  grid-template-areas: "#eventsLink #donateLink #imageLogo #storeLink #loginLink";
+header ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 30px;
 }
 
 /* =============
