--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -437,7 +437,13 @@ header ul {
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  padding: 30px;
+  padding: 20px;
+  font-size: small;
+}
+@media (min-width: 768px) {
+  header ul {
+    font-size: medium;
+  }
 }
 
 /* =============
@@ -598,8 +604,6 @@ footer > div #social ul li a:visited:active {
 #events {
   background-color: #F8E5D4;
   color: #F8E5D4;
-  display: grid;
-  grid-template-areas: ".events";
   display: flex;
   flex-direction: column;
 }
@@ -618,7 +622,10 @@ footer > div #social ul li a:visited:active {
 
 #herspaceTop {
   background-color: #A877D0;
-  padding: 20px;
+  padding: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 30px;
   text-align: center;
   box-shadow: #462D5A;
   border-radius: 20px;
@@ -626,7 +633,10 @@ footer > div #social ul li a:visited:active {
 
 #letsget {
   background-color: #F1B458;
-  padding: 20px;
+  padding: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 30px;
   text-align: center;
   box-shadow: #9D7336;
   border-radius: 20px;
@@ -634,7 +644,10 @@ footer > div #social ul li a:visited:active {
 
 #peace {
   background-color: #398A5F;
-  padding: 20px;
+  padding: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-left: 30px;
   text-align: center;
   box-shadow: #276143;
   border-radius: 20px;
@@ -642,7 +655,10 @@ footer > div #social ul li a:visited:active {
 
 #herspaceBottom {
   background-color: #EBA5E8;
-  padding: 20px;
+  padding: 30px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 30px;
   text-align: center;
   box-shadow: #7B4F79;
   border-radius: 20px;
