--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -8,7 +8,13 @@ header {
         flex-direction: row; 
         justify-content: space-around;
         align-items: center;
-        padding: 30px;
+        padding: 20px;
+        font-size: small;
+
+        @include md {
+           
+            font-size: medium;
+        }
 
         // display: grid;
         // padding: 10px;
