--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -1,8 +1,7 @@
 #events {
     background-color: #F8E5D4;
     color: #F8E5D4;
-    display: grid;
-    grid-template-areas: ".events";
+
     >div{
         
         ul {
@@ -23,6 +22,7 @@
                 "#peace #letsget"
                 "#herspaceBottom #herspaceBottom"
                 ;
+                
             }
     
         }
@@ -32,7 +32,10 @@ flex-direction: column;
 } 
 #herspaceTop{
     background-color: #A877D0;
-    padding: 20px;
+    padding: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 30px;
     text-align: center;
     box-shadow: #462D5A;
     border-radius: 20px;
@@ -40,7 +43,10 @@ flex-direction: column;
 }
 #letsget{
     background-color: #F1B458;
-    padding: 20px;
+    padding: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 30px;
     text-align: center;
     box-shadow: #9D7336;
     border-radius: 20px;
@@ -48,7 +54,10 @@ flex-direction: column;
 }
 #peace{
     background-color: #398A5F;
-    padding: 20px;
+    padding: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 30px;
     text-align: center;
     box-shadow: #276143;
     border-radius: 20px;
@@ -56,7 +65,10 @@ flex-direction: column;
 }
 #herspaceBottom{
     background-color: #EBA5E8;
-    padding: 20px;
+    padding: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 30px;
     text-align: center;
     box-shadow: #7B4F79;
     border-radius: 20px;
