--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -6,8 +6,12 @@ button {
     border-style: none;
     padding: 15px;
     border-radius: 20px;
+    transition-duration: 0.4s;
 }
 
+button:hover{
+    background-color: grey;
+}
 // .yellow-button {
 //     background-color: $electricYellow;
 //     border: none;
