--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -79,4 +79,14 @@ button{
     margin: 20px;
     border-radius: 20px;
 
+
+}
+#social{
+    display: flex;
+    justify-content: center;
+
+    img{
+        padding: 20px;
+        margin-bottom: 20px;
+    } 
 }
