--- a/dev/scss/sections/_tickets.scss
+++ b/dev/scss/sections/_tickets.scss
@@ -19,8 +19,11 @@
                     grid-template-columns: auto;
                     grid-template-areas: 
                     "#womens"
+                    "#purple"
                     "#artistsOfColor"
+                    "#yellow"
                     "#peaceofme"
+                    "#green"
                     ;
 
                     @include md {
