--- a/dev/scss/sections/_tickets.scss
+++ b/dev/scss/sections/_tickets.scss
@@ -43,7 +43,7 @@
         }
 
         //----events background----//
-        #fullback{
+        #fullbacktickets{
             background-color: #EBA5E8;
             border-radius: 20px;
             padding: 40px;
