--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -434,15 +434,18 @@ header {
   background-color: #F8E5D4;
 }
 header ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  padding: 20px;
-  font-size: small;
+  display: grid;
+  grid-template-areas: "#burger-container #logo";
+  grid-template-columns: 20% auto;
 }
 @media (min-width: 768px) {
   header ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    font-size: small;
     font-size: medium;
   }
 }
@@ -610,12 +613,12 @@ footer > div #social ul li a:visited:active {
   display: grid;
   list-style-type: none;
   width: 100%;
-  grid-template-areas: "#herspaceTop" "#peace" "#letsget" "#herspaceBottom";
 }
 @media (min-width: 768px) {
   #events > div ul {
-    grid-template-columns: 50% auto;
-    grid-template-areas: "#herspaceTop #herspaceTop" "#peace #letsget" "#herspaceBottom #herspaceBottom";
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-areas: "#herspaceTop #herspaceTop #herspaceTop #herspaceTop . . " "#herspaceTop #herspaceTop #herspaceTop #herspaceTop . . " " . . . #letsget #letsget #letsget" "#peace #peace #peace #letsget #letsget #letsget" "#peace #peace #peace #letsget #letsget #letsget" "#peace #peace #peace . . . " " . . #herspaceBottom #herspaceBottom #herspaceBottom #herspaceBottom" " . . #herspaceBottom #herspaceBottom #herspaceBottom #herspaceBottom";
   }
 }
 
@@ -626,7 +629,6 @@ footer > div #social ul li a:visited:active {
   margin-bottom: 20px;
   margin-left: 30px;
   text-align: center;
-  box-shadow: #462D5A;
   border-radius: 20px;
 }
 
@@ -637,7 +639,6 @@ footer > div #social ul li a:visited:active {
   margin-bottom: 20px;
   margin-right: 30px;
   text-align: center;
-  box-shadow: #9D7336;
   border-radius: 20px;
 }
 
@@ -648,7 +649,6 @@ footer > div #social ul li a:visited:active {
   margin-bottom: 20px;
   margin-left: 30px;
   text-align: center;
-  box-shadow: #276143;
   border-radius: 20px;
 }
 
@@ -659,7 +659,6 @@ footer > div #social ul li a:visited:active {
   margin-bottom: 20px;
   margin-right: 30px;
   text-align: center;
-  box-shadow: #7B4F79;
   border-radius: 20px;
 }
 
@@ -740,7 +739,7 @@ h1 {
 #tickets #toplogo {
   padding: 40px;
 }
-#tickets #fullback {
+#tickets #fullbacktickets {
   background-color: #EBA5E8;
   border-radius: 20px;
   padding: 40px;
