--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -9,20 +9,26 @@
             display: grid;
             list-style-type: none;
             width: 100%;
-            grid-template-areas: 
-            "#herspaceTop"
-            "#peace"
-            "#letsget"
-            "#herspaceBottom";
+            // grid-template-areas: 
+            // "#herspaceTop"
+            // "#peace"
+            // "#letsget"
+            // "#herspaceBottom";
+
 
             @include md {
 
-
-                grid-template-columns: 50% auto ;
+                display: grid;
+                grid-template-columns: repeat(6, 1fr) ;
                 grid-template-areas: 
-                "#herspaceTop #herspaceTop"
-                "#peace #letsget"
-                "#herspaceBottom #herspaceBottom"
+                "#herspaceTop #herspaceTop #herspaceTop #herspaceTop . . "
+                "#herspaceTop #herspaceTop #herspaceTop #herspaceTop . . "
+                " . . . #letsget #letsget #letsget"
+                "#peace #peace #peace #letsget #letsget #letsget"
+                "#peace #peace #peace #letsget #letsget #letsget"
+                "#peace #peace #peace . . . "
+                " . . #herspaceBottom #herspaceBottom #herspaceBottom #herspaceBottom"
+                " . . #herspaceBottom #herspaceBottom #herspaceBottom #herspaceBottom"
                 ;
 
 
@@ -47,7 +53,6 @@
     margin-bottom: 20px;
     margin-left: 30px;
     text-align: center;
-    box-shadow: #462D5A;
     border-radius: 20px;
     
 }
@@ -58,7 +63,6 @@
     margin-bottom: 20px;
     margin-right: 30px;
     text-align: center;
-    box-shadow: #9D7336;
     border-radius: 20px;
 
 }
@@ -69,7 +73,6 @@
     margin-bottom: 20px;
     margin-left: 30px;
     text-align: center;
-    box-shadow: #276143;
     border-radius: 20px;
 
 }
@@ -80,10 +83,10 @@
     margin-bottom: 20px;
     margin-right: 30px;
     text-align: center;
-    box-shadow: #7B4F79;
     border-radius: 20px;
 
 }
+
 button{ 
     background-color: #F8E5D4;
     padding: 15px;
