--- a/dev/scss/sections/_events.scss
+++ b/dev/scss/sections/_events.scss
@@ -15,14 +15,66 @@
             "#letsget"
             "#herspaceBottom";
 
+            #herspaceTop{
+                background-color: #A877D0;
+                padding: 30px;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                margin-left: 30px;
+                text-align: center;
+                box-shadow: #462D5A;
+                border-radius: 20px;
+                
+            }
+            #letsget{
+                background-color: #F1B458;
+                padding: 30px;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                margin-right: 30px;
+                text-align: center;
+                box-shadow: #9D7336;
+                border-radius: 20px;
+            
+            }
+            #peace{
+                background-color: #398A5F;
+                padding: 30px;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                margin-left: 30px;
+                text-align: center;
+                box-shadow: #276143;
+                border-radius: 20px;
+            
+            }
+            #herspaceBottom{
+                background-color: #EBA5E8;
+                padding: 30px;
+                margin-top: 20px;
+                margin-bottom: 20px;
+                margin-right: 30px;
+                text-align: center;
+                box-shadow: #7B4F79;
+                border-radius: 20px;
+            
+            }
+            
+
             @include md {
 
 
-                grid-template-columns: 50% auto ;
+                grid-template-columns: repeat(6 1fr) ;
                 grid-template-areas: 
-                "#herspaceTop #herspaceTop"
-                "#peace #letsget"
-                "#herspaceBottom #herspaceBottom"
+                "herspaceTop herspaceTop herspaceTop herspaceTop . . "
+                "herspaceTop herspaceTop herspaceTop herspaceTop . . "
+                " . . . letsget letsget letsget"
+                "peace peace peace letsget letsget letsget"
+                "peace peace peace letsget letsget letsget"
+                "peace peace peace . . . "
+                " . . herspaceBottom herspaceBottom herspaceBottom herspaceBottom"
+                " . . herspaceBottom herspaceBottom herspaceBottom herspaceBottom"
+
                 ;
 
 
@@ -40,50 +92,6 @@
 }
 
 } 
-#herspaceTop{
-    background-color: #A877D0;
-    padding: 30px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 30px;
-    text-align: center;
-    box-shadow: #462D5A;
-    border-radius: 20px;
-    
-}
-#letsget{
-    background-color: #F1B458;
-    padding: 30px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 30px;
-    text-align: center;
-    box-shadow: #9D7336;
-    border-radius: 20px;
-
-}
-#peace{
-    background-color: #398A5F;
-    padding: 30px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-left: 30px;
-    text-align: center;
-    box-shadow: #276143;
-    border-radius: 20px;
-
-}
-#herspaceBottom{
-    background-color: #EBA5E8;
-    padding: 30px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 30px;
-    text-align: center;
-    box-shadow: #7B4F79;
-    border-radius: 20px;
-
-}
 button{ 
     background-color: #F8E5D4;
     padding: 15px;
